package vcc;

option java_package = "org.exnebula.protobuf.vcc";
option java_outer_classname = "ObjectNotation";

message Datum {
    required string name = 1;
    extensions 10 to 1000;
}

message IntDatum {
    required int32 value = 1;
}

message StringDatum {
    required string value = 1;
}

message ObjectDatum {
    required ObjectNode value = 1;
}

extend Datum {
    optional ObjectDatum objectDatum = 10;
    optional IntDatum intDatum = 11;
    optional StringDatum stringDatum = 12;
    repeated ObjectDatum objectData = 30;
}

message ObjectNode {
    required string buildClass = 1;
    required int32 version = 2;
    repeated Datum data = 3;
}